logs/neg/t0204-neg.log
t0204.scala:4: error: class type required but Program.A found
 trait C extends B
                 ^
one error found
